Ecommerce - Istio-Kubernetes run/kubernetesfiles/searchservice-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: searchservice-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: searchservice-info
spec:
  hosts:
  - "*"
  gateways:
  - searchservice-gateway
  http:
  - match:
    - uri:
        prefix: /api/search
    - uri:
        exact: /api/search
    route:
    - destination:
        host: searchservice
        port:
          number: 80
